Fixed bug #73962 bug with symlink related to cyrillic directory